src/test/deca/syntax/invalid/test_synt3.deca
//Resultat:
//      Erreur syntaxique : il faut mettre || à la place de ||| 
{
	if (true ||| 5 ){
	   println("this text shouldn't be printed");
	}
}
